// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.27.0

package sql

import (
	"database/sql/driver"
	"fmt"

	"github.com/google/uuid"
	"github.com/jackc/pgx/v5/pgtype"
)

type AttachmentType string

const (
	AttachmentTypePublicExpose            AttachmentType = "public_expose"
	AttachmentTypeCorpAction              AttachmentType = "corp_action"
	AttachmentTypeEarningCall             AttachmentType = "earning_call"
	AttachmentTypePers                    AttachmentType = "pers"
	AttachmentTypeSharesOwnershipsUpdate  AttachmentType = "shares_ownerships_update"
	AttachmentTypeSharesOutstandingUpdate AttachmentType = "shares_outstanding_update"
	AttachmentTypeOthers                  AttachmentType = "others"
)

func (e *AttachmentType) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = AttachmentType(s)
	case string:
		*e = AttachmentType(s)
	default:
		return fmt.Errorf("unsupported scan type for AttachmentType: %T", src)
	}
	return nil
}

type NullAttachmentType struct {
	AttachmentType AttachmentType `json:"attachment_type"`
	Valid          bool           `json:"valid"` // Valid is true if AttachmentType is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullAttachmentType) Scan(value interface{}) error {
	if value == nil {
		ns.AttachmentType, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.AttachmentType.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullAttachmentType) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.AttachmentType), nil
}

func (e AttachmentType) Valid() bool {
	switch e {
	case AttachmentTypePublicExpose,
		AttachmentTypeCorpAction,
		AttachmentTypeEarningCall,
		AttachmentTypePers,
		AttachmentTypeSharesOwnershipsUpdate,
		AttachmentTypeSharesOutstandingUpdate,
		AttachmentTypeOthers:
		return true
	}
	return false
}

func AllAttachmentTypeValues() []AttachmentType {
	return []AttachmentType{
		AttachmentTypePublicExpose,
		AttachmentTypeCorpAction,
		AttachmentTypeEarningCall,
		AttachmentTypePers,
		AttachmentTypeSharesOwnershipsUpdate,
		AttachmentTypeSharesOutstandingUpdate,
		AttachmentTypeOthers,
	}
}

type AnalyzedCompanies struct {
	ID                    uuid.UUID          `db:"id" json:"id"`
	CompanyID             pgtype.UUID        `db:"company_id" json:"company_id"`
	ExtractedAttachmentID pgtype.UUID        `db:"extracted_attachment_id" json:"extracted_attachment_id"`
	Path                  *string            `db:"path" json:"path"`
	CreatedAt             pgtype.Timestamptz `db:"created_at" json:"created_at"`
}

type Announcements struct {
	ID        uuid.UUID          `db:"id" json:"id"`
	CompanyID pgtype.UUID        `db:"company_id" json:"company_id"`
	Name      *string            `db:"name" json:"name"`
	CreatedAt pgtype.Timestamptz `db:"created_at" json:"created_at"`
	UpdatedAt pgtype.Timestamptz `db:"updated_at" json:"updated_at"`
}

type Attachments struct {
	ID             uuid.UUID          `db:"id" json:"id"`
	AnnouncementID pgtype.UUID        `db:"announcement_id" json:"announcement_id"`
	Name           *string            `db:"name" json:"name"`
	Path           *string            `db:"path" json:"path"`
	SourceUrl      *string            `db:"source_url" json:"source_url"`
	Type           NullAttachmentType `db:"type" json:"type"`
	CreatedAt      pgtype.Timestamptz `db:"created_at" json:"created_at"`
	UpdatedAt      pgtype.Timestamptz `db:"updated_at" json:"updated_at"`
}

type Companies struct {
	ID     uuid.UUID `db:"id" json:"id"`
	Name   *string   `db:"name" json:"name"`
	Ticker *string   `db:"ticker" json:"ticker"`
}

type ExtractedAttachments struct {
	ID           uuid.UUID          `db:"id" json:"id"`
	AttachmentID pgtype.UUID        `db:"attachment_id" json:"attachment_id"`
	Name         *string            `db:"name" json:"name"`
	Path         *string            `db:"path" json:"path"`
	CreatedAt    pgtype.Timestamptz `db:"created_at" json:"created_at"`
}
